@@ -135,6 +135,17 @@ BUGFIXES:
   ZOOKEEPER-1873. Unnecessarily InstanceNotFoundException is coming when
   unregister failed jmxbeans (Rakesh R via michim)
 
+  ZOOKEEPER-2477: documentation should refer to Java cli shell and not
+  C cli shell (Abraham Fine via phunt)
+
+  Fix command handling in the C client shell (phunt via fpj)
+
+  ZOOKEEPER-2579: ZooKeeper server should verify that dataDir and
+  snapDir are writeable before starting (Abraham Fine via phunt)
+
+  ZOOKEEPER-1576. Zookeeper cluster - failed to connect to cluster if one of the
+  provided IPs causes java.net.UnknownHostException (Edward Ribeiro via camille)
+
 IMPROVEMENTS:
 
 
